# sonic-nas-interface

./: Makefile.am  README.md  configure.ac  package.cfg
debian/: changelog  control  sonic-nas-interface.install
scripts/: Makefile  dn_nas_fanout_init_config.xml
scripts/init/: sonic-create-interface.service  sonic-front-panel-ports.service  sonic-monitor-phy-media.service  sonic-phy-media-config.service
sonic/: hal_interface.h  hal_interface_common.h  hal_interface_defaults.h  interface_obj.h  nas_int_bridge.h  nas_int_com_utils.h  nas_int_lag.h  nas_int_lag_api.h  nas_int_lag_cps.h  nas_int_list.h  nas_int_logical.h  nas_int_physical_cps.h  nas_int_port.h  nas_int_utils.h  nas_int_vlan.h  nas_packet_meta.h  nas_stats.h  nas_vlan_lag.h  swp_util_tap.h
sonic/plugins/: interface_object_cache.h  interface_plugin_front_panel_port.h  interface_plugin_linux.h  interface_plugins.h  interface_utils.h
sos/: Makefile
sos/plugins/: dn_nas_interface.py
src/: Makefile  hal_int_db_handlers.cpp  nas_int_bridge.cpp  nas_int_common_obj.cpp  nas_int_ev_handlers.cpp  nas_int_list.c  nas_int_main.cpp  nas_int_vlan.cpp  nas_packet_meta.c  nas_vlan_cps.cpp  nas_vlan_lag_api.cpp  packet_io.c  swp_util_tap.c
src/interface/: interface_cache.cpp  interface_obj.cpp  interface_plugin_front_panel_port.cpp  interface_plugin_linux.cpp  interface_plugins.cpp  interface_utils.cpp
src/lag/: nas_int_lag.c  nas_int_lag_api.cpp  nas_int_lag_cps.cpp
src/port/: hal_int_utils.c  nas_int_breakout.cpp  nas_int_logical_cps.cpp  nas_int_physical_cps.cpp  nas_int_port.cpp
src/stats/: nas_stats_if_cps.cpp  nas_stats_vlan_cps.cpp
src/unit_test/: interface_file_reader_unit_test.c  nas_int_lag_unittest.cpp  nas_int_loopback_unittest.cpp  nas_int_media_unittest.cpp  nas_int_rpc_unittest.cpp  (+6 more)
(+9 files in other folders)
